--- a/Documentation/1x08.md
+++ b/Documentation/1x08.md
@@ -4,18 +4,18 @@
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 1. Архитектура и Хранилище
+* **Пакет:** 1 — Архитектура и Хранилище
 * **Блок:** 1.8 — Журнал транзакций (WAL — Write-Ahead Log)
 
 ---
 
-🎯 **Назначение**
+## 🎯 Назначение
 
 Модуль WAL (журнал предзаписи) обеспечивает надежную запись всех изменений до их фиксации в основном хранилище. Он гарантирует сохранность данных при сбоях и участвует в процессе восстановления. Неотъемлемая часть ACID-модели.
 
 ---
 
-⚙️ **Функциональность**
+## ⚙️ Функциональность
 
 | Подсистема        | Реализация / Особенности                                 |
 | ----------------- | -------------------------------------------------------- |
