--- a/Documentation/4x00.md
+++ b/Documentation/4x00.md
@@ -1,1 +1,14 @@
+4.1 — JDBC/ODBC/CLI-интерфейсы
+4.2 — REST, gRPC и JSON:API
+4.3 — GraphQL и OpenAPI
+4.4 — Поддержка WebSocket и подписок
+4.5 — REST Webhooks и обратные вызовы (async eventing)
+4.6 — Внешние процедуры и плагины (External Procedures, dlopen)
+4.7 — Асинхронные обработчики событий (Async Event Processors)
+4.8 — CDC и стриминг изменений (Change Data Capture: Kafka, Pulsar, Debezium)
+4.9 — Поддержка Webhooks и REST-notify
 
+
+4.1 — Поддержка HTAP (Hybrid Transactional/Analytical Processing)
+4.2 — Интеграция с BI: Views, Materialized Views, Adaptive Aggregates
+4.5 — Встроенные функции: ранги, процентиль, корреляция, кластеризация
