--- a/Documentation/0x00.md
+++ b/Documentation/0x00.md
@@ -16,3 +16,26 @@
 | 10 | Тестируемость и структура проекта | 6                                    |
 | 11 | Дополнительно                     | 5                                    |
 |    |    **Всего:**                     | ✅ **90 архитектурных блоков**      |
+
+
+
+| Категория                     | Кол-во блоков |
+| ----------------------------- | ------------- |
+| 1. Архитектура и Хранилище    | 19            |
+| 2. Транзакционность           | 9             |
+| 3. SQL и Языки                | 7             |
+| 4. Интерфейсы и Интеграции    | 9             |
+| 5. BI, ML, OLAP               | 6             |
+| 6. Безопасность               | 6             |
+| 7. Observability и DevOps     | 8             |
+| 8. Производительность         | 9             |
+| 9. Расширяемость              | 5             |
+| 10. Тестируемость и структура | 5             |
+| 11. Дополнительно             | 7             |
+| **Итого**                     | **90 блоков** |
+
+📌 Некоторые новые блоки были добавлены на основании:
+
+* системных требований (`system-versioned tables`, `AS OF`, `error logging`);
+* производственного уровня зрелости (`feedback loop`, `trace viewer`, `alertmanager`, `binary logger`);
+* реального кода (`binlog_viewer`, `rest_api`, `udf_runtime`, `etl_ops`, `protocol.c` и др.).
